# arcade-agent

./: INSTRUCTIONS.md  README.md  pyproject.toml
.github/skills/improve-architecture-metrics/: SKILL.md
.github/workflows/: architecture-analysis-reusable.yml  ci.yml
examples/: compare_algorithms.py  comparison_report.html
pulls/4/: comments
scripts/: __init__.py  compare_baseline.py  log_analysis_results.py  log_analysis_summary.py  run_self_analysis.py  self_analysis.py
src/arcade_agent/: __init__.py  serialization.py
src/arcade_agent/algorithms/: acdc.py  arc.py  architecture.py  clustering.py  concern.py  coupling.py  cycles.py  limbo.py  llm.py  matching.py  metrics.py  smells.py
src/arcade_agent/exporters/: dot.py  html.py  json.py  mermaid.py  rsf.py
src/arcade_agent/models/: __init__.py  architecture.py  graph.py  metrics.py  smells.py
src/arcade_agent/parsers/: base.py  c.py  graph.py  java.py  python.py  typescript.py
src/arcade_agent/tools/: compare.py  compute_metrics.py  detect_smells.py  ingest.py  parse.py  query.py  recover.py  registry.py  visualize.py
src/arcade_agent/tools/adapters/: __init__.py  mcp.py
tests/: conftest.py  test_arch_diff.py  test_serialization.py
tests/test_algorithms/: test_arc.py  test_limbo.py  test_matching.py
tests/test_parsers/: test_java.py  test_python.py
tests/test_scripts/: test_compare_baseline.py  test_log_analysis_summary.py  test_run_self_analysis.py
tests/test_tools/: test_compare_baseline.py  test_detect_smells.py  test_detect_smells_llm.py  test_export_json.py  test_recover.py  test_self_analysis.py
