[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcade-agent"
version = "0.1.0"
description = "Framework-agnostic tool library for software architecture analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Duc Le", email = "duclm.bk@gmail.com" },
]
keywords = ["software-architecture", "architecture-recovery", "static-analysis", "code-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "tree-sitter>=0.24.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "networkx>=3.4",
    "jinja2>=3.1",
    "gitpython>=3.1",
    "scipy>=1.14",
    "numpy>=2.0",
]

[project.urls]
Homepage = "https://github.com/lemduc/arcade-agent"
Repository = "https://github.com/lemduc/arcade-agent"
Documentation = "https://lemduc.github.io/arcade-agent/"

[project.optional-dependencies]
languages = [
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/arcade_agent/exporters/html.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
